# weather-wardrobe

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
ansible/: inventory.ini  playbook.yml
tests/: test_recommender.py
weather_wardrobe/: main.py  metrics.py  recommender.py
